environments/gloo-gateway/gateway-api/live/httpbin-app/base/fault-injection/abort/httpbin-fault-injection-abort-delegate-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-fault-injection-abort-delegate-route
  namespace: httpbin
spec:
  rules:
    - matches:
      - path:
          type: Exact
          value: /anything/fault
      backendRefs:
        - name: httpbin
          port: 8000
          weight: 100
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.solo.io
            kind: RouteOption
            name: httpbin-fault-injection-abort-route-policies
